--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,10 +1,10 @@
 // dimensions
-$home-height: 3000px;
+$home_height: 3000px;
 
 // fonts
 @import url('https://fonts.googleapis.com/css2?family=Signika&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 
 // colors
-$dark-grey:#363636;
-$dark-gold:rgb(209, 178, 0);
+$dark_grey: #363636;
+$dark_gold: rgb(209, 178, 0);
