--- a/src/components/home/Tagline/Tagline.scss
+++ b/src/components/home/Tagline/Tagline.scss
@@ -1,5 +1,3 @@
-@import '../../../styles/variables';
-@import '../../../styles/mixins';
 
 .tag-wrapper {
     color: black;
@@ -17,7 +15,7 @@
 }
 
 .svg-wrapper {
-    background-color: $dark-grey;
+    background-color: variables.$dark-grey;
     border-radius: 50%;
     text-align: center;
     margin-right: 1rem;
@@ -28,7 +26,7 @@
         padding-left: 1rem;
         padding-top: 1rem;
         padding-right: 1rem;
-        fill: $dark-gold;
+        fill: variables.$dark-gold;
     }
 }
 
