--- a/src/components/professional/card/Card.scss
+++ b/src/components/professional/card/Card.scss
@@ -1,9 +1,7 @@
-@import '../../../styles/variables';
-@import '../../../styles/reset';
-@import '../../../styles/mixins';
+@use '/src/styles/reset';
 
 .professional-card {
-    background-color: $dark-grey;
+    background-color: variables.$dark-grey;
     color: white;
     font-family: 'Rubik', sans-serif;
     padding: 2rem;
@@ -25,7 +23,7 @@
 }
 
 .professional-header {
-    color: $dark-gold;
+    color: variables.$dark-gold;
 }
 
 .professional-summary {
