--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -65,15 +65,12 @@
 }
 
 #svgGear {
-    animation: rotateThis 10s infinite;
+    animation: rotateThis 10s linear infinite;
 }
 
 @keyframes rotateThis {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(359deg);
+    100% {
+        transform: rotate(360deg);
     }
 }
 
